# zinoma

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE-CHECKLIST.md  build.rs  buildy.yml  zinoma.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  test-deb.yml  test.yml  update-gh-pages.yml
HomebrewFormula/: zinoma.rb
benches/hello_world/: Makefile  README.md  build.gradle  zinoma.yml
benches/incremental/: .gitignore  README.md  build.gradle  package-lock.json  package.json  zinoma.yml
ci/: cargo-out-dir.sh  sha256-releases.sh
doc/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/convert/: trait.From.js  trait.TryFrom.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/futures_core/stream/: trait.Stream.js
doc/implementors/schemars/: trait.JsonSchema.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/implementors/zinoma/domain/: trait.ResourcesPaths.js
doc/search.desc/zinoma/: zinoma-desc-0-.js
doc/src/zinoma/: async_utils.rs.html  clean.rs.html  cli.rs.html  domain.rs.html  fs.rs.html  main.rs.html  run_script.rs.html  work_dir.rs.html
doc/src/zinoma/async_utils/: exponential_backoff.rs.html  mod.rs.html
doc/src/zinoma/config/: ir.rs.html  mod.rs.html
doc/src/zinoma/engine/: build_state.rs.html  builder.rs.html  mod.rs.html  (+4 more)
doc/trait.impl/schemars/: trait.JsonSchema.js
doc/zinoma/: all.html  enum.TerminationMessage.html  fn.main.html  fn.terminate_on_ctrlc.html  index.html  sidebar-items.js  static.DEFAULT_CHANNEL_CAP.html  static.GLOBAL.html  struct.TerminationMessage.html
doc/zinoma/async_utils/: fn.all.html  fn.both.html  index.html  sidebar-items.js
doc/zinoma/clean/: fn.clean_path.html  fn.clean_target_output_paths.html  index.html  sidebar-items.js
doc/zinoma/cli/: fn.get_app.html  index.html  sidebar-items.js
doc/zinoma/config/: index.html  sidebar-items.js
doc/zinoma/domain/: enum.Target.html  enum.TargetType.html  fn.matches_extensions.html  index.html  sidebar-items.js  struct.AggregateTarget.html  struct.BuildTarget.html  struct.CmdResource.html  struct.FilesResource.html  struct.Project.html  struct.Resources.html  struct.ServiceTarget.html  struct.Target.html  struct.TargetCanonicalName.html  struct.TargetId.html  struct.TargetMetadata.html  trait.ResourcesPaths.html  type.FileExtensions.html  type.TargetId.html
doc/zinoma/engine/: enum.BuildCancellationMessage.html  enum.WatchOption.html  fn.build_target_incrementally.html  fn.execute_once.html  fn.run.html  fn.watch.html  index.html  sidebar-items.js  struct.BuildReport.html  struct.Engine.html
doc/zinoma/fs/: fn.list_files_in_path.html  fn.list_files_in_paths.html  fn.list_files_in_resources.html  index.html  sidebar-items.js
doc/zinoma/run_script/: fn.build_command.html  index.html  sidebar-items.js
doc/zinoma/work_dir/: constant.WORK_DIR_NAME.html  fn.get_work_dir_path.html  fn.is_in_work_dir.html  fn.is_work_dir.html  fn.remove_work_dir.html  index.html  sidebar-items.js
examples/node/: README.md  zinoma.yml
src/: async_utils.rs  checksum.rs  clean.rs  cli.rs  config.rs  domain.rs  engine.rs  fs.rs  incremental.rs  main.rs  receiver.rs  run_script.rs  target.rs  watcher.rs  work_dir.rs
src/async_utils/: all.rs  exponential_backoff.rs  mod.rs
src/async_utils/all/: both.rs  iter.rs  maybe_done.rs  mod.rs
src/config/: conversion.rs  ir.rs  mod.rs  validation.rs  yaml.rs
src/config/yaml/: mod.rs  schema.rs
src/engine/: build_state.rs  builder.rs  incremental.rs  mod.rs  process.rs  run_state.rs  service.rs  target_actor.rs  target_actors.rs  watcher.rs
src/engine/incremental/: cmd_outputs.rs  env_vars.rs  fs.rs  fs_hash.rs  mod.rs  storage.rs
src/engine/target_actor/: aggregate_target_actor.rs  build_target_actor.rs  mod.rs  service_target_actor.rs  target_actor_helper.rs
tests/: integ.rs
tests/integ/build_failure/: zinoma.yml
tests/integ/circular_dependency/: zinoma.yml
tests/integ/circular_dependency_in_resources/: zinoma.yml
tests/integ/cmd_stdout_input/: zinoma.yml
tests/integ/cmd_stdout_input_macos/: .gitignore  zinoma.yml
tests/integ/cmd_stdout_input_windows/: zinoma.yml
tests/integ/dependency_output_as_input/: .gitignore  resource.txt  zinoma.yml
tests/integ/env_var_input/: .gitignore  zinoma.yml
tests/integ/import_project_with_no_name/: zinoma.yml
tests/integ/imports/: zinoma.yml
tests/integ/incremental_multi_projects_build/: zinoma.yml
tests/integ/input_failure/: zinoma.yml
tests/integ/input_should_reject_service_output/: zinoma.yml
tests/integ/invalid_checksums_file/: zinoma.yml
tests/integ/invalid_project_name/: zinoma.yml
tests/integ/named_project/: zinoma.yml
tests/integ/non_matching_imported_project_name/: zinoma.yml
tests/integ/non_requested_service/: zinoma.yml
tests/integ/paths_input_resource_with_extensions/: zinoma.yml
tests/integ/paths_output_resource_with_extensions/: .gitignore  zinoma.yml
tests/integ/root_input_path/: source.txt  zinoma.yml
(+199 files in other folders)
