[package]
name = "zinoma"
version = "0.4.0"
authors = ["Florent Bécart <florent.becart@gmail.com>"]
edition = "2018"

description = "Žinoma - Make your build flow incremental"
license = "MIT"
repository = "https://github.com/fbecart/zinoma"
homepage = "https://github.com/fbecart/zinoma"
documentation = "https://github.com/fbecart/zinoma/blob/master/README.md"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["parallel", "incremental", "build", "tool", "watch"]
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
crossbeam = "=0.7.3"
duct = "0.13"
walkdir = "2"
notify = { version = "=5.0.0-pre.2", features = ["serde"] }
clap = "3.0.0-beta.1"
log = "0.4.8"
stderrlog = "0.4.3"
anyhow = "1.0.28"
regex = "1"
lazy_static = "1.4.0"
seahash = "4.0.0"
rayon = "1.3.0"
bincode = "1.2.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"

[build-dependencies]
clap = "3.0.0-beta.1"
clap_generate = "3.0.0-beta.1"
